REGRESSION(r262716) Web Inspector: start button is misaligned in Audit content view https://bugs.webkit.org/show_bug.cgi?id=214891
Reviewed by Devin Rousso.

In r262716, a rendering defect related to flexbox was fixed. Web Inspector
layout inadvertently relied on the defect. Now that it's fixed, a CSS rule is
pushing the outline for navigation help buttons out of vertical alignment
with surrounding textt.

* UserInterface/Views/Main.css:
(.navigation-item-help): Remove line-height. It was previously ignored
due to a layout bug, and now its presence messes up vertical alignment.


Canonical link: https://commits.webkit.org/227712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265008 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/Main.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Main.css
@@ -225,7 +225,6 @@ body.docked:matches(.right, .left) #navigation-sidebar.collapsed > .resizer {
 
 .navigation-item-help {
     display: block;
-    line-height: 22px;
 }
 
 .navigation-item-help > .navigation-bar {
